spacing issue

--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -24,7 +24,7 @@
     --orange: #D45B07;
     --red: #FB5352;
     --light-green: #8EC627;
-   --off-green: #09655A;
+    --off-green: #09655A;
 }
 
 /*--------font-size------*/
@@ -75,9 +75,11 @@
 .text-light-green {
     color: var(--light-green);
 }
+
 .bg-yellow {
- background-color: var(--yellow);
+    background-color: var(--yellow);
 }
+
 .bg-sky {
     background-color: var(--sky);
 }
@@ -89,14 +91,17 @@
 .bg-red {
     background-color: var(--red);
 }
+
 .bg-light-green {
     background-color: var(--light-green);
 }
+
 .bg-dark-green {
     background-color: var(--dark-green);
 }
-.bg-off-green{
-    background-color:var( --off-green);
+
+.bg-off-green {
+    background-color: var(--off-green);
 }
 
 @media(max-width:1200px) {
@@ -108,24 +113,25 @@
         --font-xl: 160px;
     }
 }
+
 @media(max-width:1024px) {
     :root {
         --font-base: 16px;
         --font-md: 18px;
         --font-lg: 28px !important;
         --font-2lg: 40px;
-        --font-xl: 160px;
     }
 }
+
 @media(max-width:992px) {
     :root {
         --font-base: 14px;
         --font-md: 16px;
         --font-lg: 20px !important;
-        --font-2lg: 40px;
-        --font-xl: 160px;
+
     }
 }
+
 @media(max-width:768px) {
     :root {
         --font-base: 14px;
@@ -135,12 +141,9 @@
         --font-xl: 140px;
     }
 }
+
 @media(max-width:576px) {
     :root {
-        --font-base: 14px;
-        --font-md: 14px;
-        --font-lg: 18px !important;
-        --font-2lg: 40px;
         --font-xl: 80px;
     }
 }
